fixes issue #1722 on smaller tablets, ipad pro still problem

--- a/meinberlin/assets/scss/components/_map.scss
+++ b/meinberlin/assets/scss/components/_map.scss
@@ -95,6 +95,9 @@
 
     @media (min-width: $breakpoint) {
         flex-direction: row;
+    }
+
+    @media (min-width: $breakpoint-md + 0.1em) {
         margin-left: 18rem;
     }
 
